--- a/amplify/backend/package.json
+++ b/amplify/backend/package.json
@@ -7,9 +7,11 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-amplify/cli-extensibility-helper": "^2.3.0"
+    "@aws-amplify/cli-extensibility-helper": "^2.3.0",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.6",
     "typescript": "^4.2.4"
   }
 }
