--- a/amplify/backend/api/sampleTodo/TodoSample.yaml
+++ b/amplify/backend/api/sampleTodo/TodoSample.yaml
@@ -20,7 +20,6 @@ paths:
   /todos:
     get:
       summary: TODOリスト取得
-      tags: []
       responses:
         '200':
           description: TODOリスト取得成功
@@ -77,6 +76,8 @@ paths:
         - ID-Token: []
       requestBody:
         content: {}
+      tags:
+        - Todo
     post:
       summary: TODO追加
       operationId: post-todos
@@ -159,6 +160,8 @@ paths:
                   $ref: '#/components/schemas/Todo'
                   x-stoplight:
                     id: z7oyxqmt6xk8w
+      tags:
+        - Todo
   '/todos/{id}':
     parameters:
       - schema:
@@ -169,7 +172,6 @@ paths:
         description: TODOの識別用ID
     get:
       summary: TODO詳細情報取得
-      tags: []
       responses:
         '200':
           description: TODO詳細情報取得成功
@@ -225,6 +227,8 @@ paths:
       description: TODOの詳細情報を取得
       security:
         - ID-Token: []
+      tags:
+        - Todo
     put:
       summary: TODO詳細情報更新
       operationId: put-todos-id
@@ -300,6 +304,8 @@ paths:
                   x-stoplight:
                     id: c3j6pkiyq8rhj
         description: ''
+      tags:
+        - Todo
     delete:
       summary: TODO削除
       operationId: delete-todos-id
@@ -364,6 +370,8 @@ paths:
       description: TODOを削除する。
       security:
         - ID-Token: []
+      tags:
+        - Todo
 components:
   schemas:
     Todo:
