--- a/.github/workflows/create-importable-swagger.yaml
+++ b/.github/workflows/create-importable-swagger.yaml
@@ -7,7 +7,7 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v3
       - name: test
-        run: cd /home/runner/work && tree -d -L 8
+        run: cd /home/runner/work && tree -a -L 8
         shell: bash
       - name: modify Swagger and commit
         uses: HayatoTakahashi129/swaggerModifier@develop
