--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -8,7 +8,7 @@
             "Arn"
           ],
           "category": "function",
-          "resourceName": "sampleTodoApiTodo"
+          "resourceName": "sampleTodoTodo"
         }
       ],
       "providerPlugin": "awscloudformation",
@@ -59,22 +59,9 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
-    "sampleTodoApiTodo": {
+    "sampleTodoTodo": {
       "build": true,
-      "dependsOn": [
-        {
-          "attributeEnvMap": {
-            "Arn": "TABLE_ARN",
-            "Name": "TABLE_NAME"
-          },
-          "attributes": [
-            "Name",
-            "Arn"
-          ],
-          "category": "storage",
-          "resourceName": "todos"
-        }
-      ],
+      "dependsOn": [],
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     }
@@ -133,22 +120,6 @@
         {
           "category": "function",
           "resourceName": "cognitodemo881eb16cVerifyAuthChallengeResponse"
-        }
-      ]
-    },
-    "AMPLIFY_function_sampleTodoApiTodo_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "sampleTodoApiTodo"
-        }
-      ]
-    },
-    "AMPLIFY_function_sampleTodoApiTodo_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "sampleTodoApiTodo"
         }
       ]
     }
